Fixed: Path should only start after user presses "path", not from beginning of simulation
Moved the "Moon" checkbox next to "My Sun & Planet" mode radio button, since that is the only mode in which it can be used
Made mode radio buttons appear in the same place for all canvases
Fixed: Reset all is broken
Made trace disappear after 2 earth years
Removed the phet logo to save vertical space on the control panel
Fixed: In real modes, velocities should not be draggable
Fixed: In real modes, bodies should not be draggable
Fixed: forces not visible in Sun, Earth, Moon mode
Switched to "one canvas per mode" paradigm
Made velocity circles more like "my solar system"
-added a 'v' to the circle
-made the circle gray
-made the vectors go behind planets
-made the 'v' circle go behind vectors
Added arrow icons next to arrow checkboxes
Improved performance of path graphics
Switched to colors in PhetColorScheme
Added a titled border around "show" panel in control panel
Renamed and ordered "show" buttons in control panel
Removed "to scale" button
Initial support for different modes
Fixed: force vectors do not update while the sim is paused
# 0.0.03 (45917) Nov 10, 2010
Added feasibility test for simsharing
# 0.0.02 (45729) Nov 4, 2010
Many improvements for the second version
# 0.0.01 (45696) Nov 3, 2010